--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/MultipleSelector.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/MultipleSelector.cshtml
@@ -1,6 +1,15 @@
 ﻿@model EntityViewModel
 @{
-    Layout = null;
+    object area = ViewContext.RouteData.DataTokens["Area"];
+    if (area == null)
+    {
+        Layout = "~/Views/Shared/_DialogLayout.cshtml";
+    }
+    else
+    {
+        Layout = "~/Areas/" + area.ToString() + "/Views/Shared/_DialogLayout.cshtml";
+    }
+    ViewBag.Title = Model.Metadata.Name + " Multiple Selector";
 }
 <div class="row">
     @if (Model.Parent != null)
@@ -8,7 +17,7 @@
         <div class="col-md-3" id="selectorparentview">
             <ul>
                 <li class="jstree-open">
-                    <a data-nav="true" href="@Html.Raw(Url.ClearQueryPath("page"))">All</a>
+                    <a href="@Html.Raw(Url.ClearQueryPath("page"))">All</a>
                     <ul>
                         @{Html.RenderPartial("ParentView", Model.Parent);}
                     </ul>
@@ -20,10 +29,10 @@
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <td class="text-center" width="36"><input type="checkbox" id="checkAll" /> </td>
+                    <th class="text-center" width="36"></th>
                     @for (int i = 0; i < Model.Headers.Length; i++)
                     {
-                        <td title="@Model.Headers[i].Description">@(Model.Headers[i].ShortName ?? Model.Headers[i].Name)</td>
+                        <th title="@Model.Headers[i].Description">@(Model.Headers[i].ShortName ?? Model.Headers[i].Name)</th>
                     }
                 </tr>
             </thead>
@@ -45,7 +54,40 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-12 text-center">
+    <div class="col-md-4">
+        @{Html.PaginationButton(Model);}
+    </div>
+    <div class="col-md-4 text-center">
+        <div class="btn-group">
+            @if (Model.Metadata.SearchProperties.Length > 0)
+            {
+                <a class="btn btn-default" href="@Url.Action("Search",new {actionName = "MultipleSelector"})">Search</a>
+            }
+            <button class="btn btn-default" onclick="ok()">OK</button>
+        </div>
+    </div>
+    <div class="col-md-4 text-right">
         @{Html.Pagination(Model);}
     </div>
 </div>
+<script type="text/javascript">
+    function ok() {
+        var items = $(':checked[value]');
+        if (items.length == 0) {
+            alert('Please select at least one.');
+            return;
+        }
+        var result = new Array();
+        items.each(function (index, element) {
+            element = $(element);
+            var id = element.val();
+            var name = element.attr('data-name');
+            result.push('<option value=' + id + '>' + name + '</option>');
+        });
+        window.returnValue = result;
+        if (window.opener) {
+            window.opener.returnValue = window.returnValue;
+        }
+        window.close();
+    }
+</script>
